# Python_Site_FinalProject_Dzhabagiev

./: .gitignore  README.md  pyproject.toml  pytest.ini
core/: admin.py  constraints.py  forms.py  models.py  urls.py  views.py
core/templates/: base.html  home.html
core/templates/clothes/: clothes_detail.html  clothes_list.html  create_clothes.html
core/templates/posts/: approve_post.html  create_post.html  post_detail.html  post_list.html
core/templates/registration/: login.html  logout.html  register.html
core/templates/rentals/: create_rental.html  rental_detail.html  rental_list.html
core/templates/transactions/: create_transaction.html  transaction_detail.html  transaction_list.html
rental/: settings.py  urls.py
tests/: views_tests.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
